--- a/app/src/main/res/layout/activity_gameplay.xml
+++ b/app/src/main/res/layout/activity_gameplay.xml
@@ -20,14 +20,13 @@
         <com.example.admat.rpgini.GameplayView
             android:id="@+id/gameplay"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1" />
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
 
             <Button
                 android:layout_width="wrap_content"
