--- a/app/src/main/res/layout/activity_gameplay.xml
+++ b/app/src/main/res/layout/activity_gameplay.xml
@@ -20,13 +20,25 @@
         <com.example.admat.rpgini.GameplayView
             android:id="@+id/gameplay"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_height="wrap_content" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine"
+            android:ems="10"
+            android:id="@+id/editText_gameplayLog"
+            android:layout_weight="1"
+            android:singleLine="false"
+            android:selectAllOnFocus="false"
+            android:editable="false"
+            android:enabled="false" />
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
 
             <Button
                 android:layout_width="wrap_content"
@@ -43,7 +55,6 @@
                 android:layout_height="wrap_content"
                 android:text="@string/block"
                 android:id="@+id/button_block" />
-
 
         </LinearLayout>
     </LinearLayout>
