--- a/app/src/main/res/layout/activity_gameplay.xml
+++ b/app/src/main/res/layout/activity_gameplay.xml
@@ -22,17 +22,37 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="1"
+        android:gravity="center"
+        android:orientation="horizontal" >
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="130dp"
             android:inputType="textMultiLine"
             android:ems="10"
             android:id="@+id/editText_gameplayLog"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:singleLine="false"
             android:selectAllOnFocus="false"
             android:editable="false"
             android:enabled="false" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="130dp"
+            android:inputType="textMultiLine"
+            android:ems="10"
+            android:id="@+id/editText_gameplayStats"
+            android:layout_weight="0.5"
+            android:singleLine="false"
+            android:selectAllOnFocus="false"
+            android:editable="false"
+            android:enabled="false" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
