--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -5,6 +5,13 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <TextView
+        android:id="@+id/textview_playerStatus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Name: Harambe Lvl: 1 XP: 0"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
+
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
